content elements aligned with barest of content samples

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
       <section class = "main">
 
         <div class = 'col-left'>
-          <h3>This is Where Information Is</h3>
+          <h5>This is Where Information Is</h5>
+          <br>
+          <p>This the place where the purpose and or function of this page is explained </p>
+          <h6>Search</h6>
         </div>
 
         <div class = 'center'>
           <h1>On a Certain Day A Thing Will Happen</h1>
+          <p><em>By Nomen Klatura, Person of Interest</em></p>
         </div>
 
 
