second draft with right box for twitter

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
         <div class = 'center'>
           <h1>On a Certain Day A Thing Will Happen</h1>
           <p><em>By Nomen Klatura, Person of Interest</em></p>
+          <img src="cityofur.jpg" alt="postpic">
         </div>
 
+        <div class = 'box-right'>
+          <h5>Never miss a post!</h5>
+
+        </div>
 
       </section>
     </div>
